--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 	  &nbsp;&nbsp;&nbsp;&nbsp;-->
 	        <a href="publications/">Publications</a>&nbsp;&nbsp;&nbsp;&nbsp;
 	        <a href="https://github.com/fengshi96">Github</a>&nbsp;&nbsp;&nbsp;&nbsp;
+	        <a href="cv/">CV</a>&nbsp;&nbsp;&nbsp;&nbsp;
 		</font>
 		<hr>
 
@@ -88,7 +89,8 @@
 			<li><a href="https://www.quantamagazine.org/" target="_self">Quanta Magazine</a></li>
 			<li><a href="https://math.ucr.edu/home/baez/" target="_self">Professor Baez’s Page</a></li>
 			<li><a href = "http://golem.ph.utexas.edu/category/">n-Category Caf&eacute;</a>, a group blog on math, physics and philosophy </li>
-		</ul>	
+		</ul>
+		<br></br>
 	</body>
 
 	
