--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		</font>
 		<hr>
 
-		<h1>Shi Feng's Stuff</h1>
+		<h1>Shi Feng (Under Construction)</h1>
 		I'm a graduate student of theoretical condensed matter physics at <a href="http://trivediresearch.org.ohio-state.edu/" target="_self">Dr. Trivedi's group</a> in the Ohio State University. I am interested in understanding quantum phase transition, quantum spin liquids and their overlap with quantum information theory.
 	
 
@@ -71,23 +71,40 @@
 			</dd>
 		</dl>
 
-		<h2>Notes</h2>
+		<h2>Notes on Physics</h2>
 		<nav>
-			Here are some of my notes on my topics of interest. 
+			Here are some of my notes on topics of physics. 
 		<ul>
-			<li><a href="notes/entanglement.html" target="_self"> Quantum Correlation (Entanglement)</a></li>
-			<li><a href="notes/mcmc.html" target="_self">Markov Chain Monte Carlo</a></li>
-			<li><a href="notes/latticegauge.html" target="_self">Z2 Gauge Theory</a></li>
-			<li><a href="notes/group.html" target="_self">Group Theory</a></li>
-			<li><a href="notes/category.html" target="_self">Category Theory</a></li>
-			<li><a href="notes/index.html" target="_self">others......</a></li>
+			<li><a href="notes/physics/entanglement.html" target="_self"> Quantum Correlation (Entanglement)</a></li>
+			<li><a href="notes/physics/mcmc.html" target="_self">Markov Chain Monte Carlo</a></li>
+			<li><a href="notes/physics/latticegauge.html" target="_self">Z2 Gauge Theory</a></li>
+			<li><a href="notes/physics/other.html" target="_self">others...</a></li>
 		</ul>
 		</nav>
 
+		<h2>Notes on Math</h2>
+		<nav>
+			Here are some of my notes on mathematics. 
+		<ul>
+			<li><a href="notes/math/group.html" target="_self">Group Theory</a></li>
+			<li><a href="notes/math/category.html" target="_self">Category Theory</a></li>
+			<li><a href="notes/math/other.html" target="_self">others...</a></li>
+		</ul>
+		</nav>
+		<h2>Notes on Programming</h2>
+		<nav>
+			Here are some of my notes on coding. 
+		<ul>
+			<li><a href="notes/programming/python.html" target="_self">Python</a></li>
+			<li><a href="notes/programming/cpp.html" target="_self">C++</a></li>
+			<li><a href="notes/programming/julia.html" target="_self">Julia</a></li>
+			<li><a href="notes/programming/perl.html" target="_self">Perl</a></li>
+			<li><a href="notes/programming/other.html" target="_self">others...</a></li>
+		</ul>
+		</nav>
 		<h2>My Favorites</h2> 
 		<ul>
 			<li><a href="https://www.quantamagazine.org/" target="_self">Quanta Magazine</a></li>
-			<li><a href="https://math.ucr.edu/home/baez/" target="_self">Professor Baez’s Page</a></li>
 			<li><a href = "http://golem.ph.utexas.edu/category/">n-Category Caf&eacute;</a>, a group blog on math, physics and philosophy </li>
 		</ul>
 		<br></br>
