--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
 		<font face = "bookman">
 		<font size = 4>
 			<!--<a href="TWF.html">This&nbsp;Week's&nbsp;Finds</a> &nbsp;&nbsp; &nbsp;&nbsp; -->
-		<a href="fun/">Fun&nbsp;Stuff</a>&nbsp;&nbsp;&nbsp;&nbsp;
-		<a href="serious/">Serious&nbsp;Stuff</a>&nbsp;&nbsp;&nbsp;&nbsp;
+		<!-- <a href="fun/">Fun&nbsp;Stuff</a>&nbsp;&nbsp;&nbsp;&nbsp; -->
+		<!-- <a href="serious/">Serious&nbsp;Stuff</a>&nbsp;&nbsp;&nbsp;&nbsp; -->
 		<!-- <a href="TALKS.html"Talks</a>&nbsp;&nbsp;&nbsp;&nbsp; -->
 		<!-- <a href="QG.html">Seminar</a>&nbsp;&nbsp;&nbsp;&nbsp; -->
 		<!--<a href="diary/index.html#now">Diary</a>&nbsp;&nbsp;&nbsp;&nbsp; -->
 		<!--<a href="https://twitter.com/johncarlosbaez">Twitter</a> 
 	  &nbsp;&nbsp;&nbsp;&nbsp;-->
+	        <a href="gleanings/">Gleanings</a>&nbsp;&nbsp;&nbsp;&nbsp;
 		<a href="notes/index.html">Notes</a>
 		&nbsp;&nbsp;&nbsp;&nbsp;
 		<!--<a href="http://www.azimuthproject.org/azimuth/show/HomePage">Azimuth Project</a>
