--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<!--<a href="diary/index.html#now">Diary</a>&nbsp;&nbsp;&nbsp;&nbsp; -->
 		<!--<a href="https://twitter.com/johncarlosbaez">Twitter</a> 
 	  &nbsp;&nbsp;&nbsp;&nbsp;-->
-	        <a href="gleanings/">Gleanings</a>&nbsp;&nbsp;&nbsp;&nbsp;
+	        <a href="gleanings/index.html">Gleanings</a>&nbsp;&nbsp;&nbsp;&nbsp;
 		<a href="notes/index.html">Notes</a>
 		&nbsp;&nbsp;&nbsp;&nbsp;
 		<!--<a href="http://www.azimuthproject.org/azimuth/show/HomePage">Azimuth Project</a>
@@ -27,7 +27,7 @@
 	  &nbsp;&nbsp;&nbsp;&nbsp;-->
 	        <a href="publications/">Publications</a>&nbsp;&nbsp;&nbsp;&nbsp;
 	        <a href="https://github.com/fengshi96">Github</a>&nbsp;&nbsp;&nbsp;&nbsp;
-	        <a href="cv/">CV</a>&nbsp;&nbsp;&nbsp;&nbsp;
+	        <a href="cv/CV2021.pdf">CV</a>&nbsp;&nbsp;&nbsp;&nbsp;
 		</font>
 		<hr>
 
@@ -60,14 +60,14 @@
 			<dt><strong>Density Matrix Renormalization Group</strong></dt>
 			<dd>
 				<p>
-					Implementations...
+					TBW
 				</p>
 			</dd>
 			<br></br>
 			<dt><strong>Tensor Network</strong></dt>
 			<dd>
 				<p>
-					Tensor Network are ...
+					TBW
 				</p>
 			</dd>
 		</dl>
@@ -80,8 +80,8 @@
 			<li><a href="notes/physics/mcmc/mcmc.html" target="_self">Markov Chain Monte Carlo</a>
 			<a href="notes/physics/mcmc/mcmc.pdf" target="_self">(PDF)</a></li>
 
-			<li><a href="notes/physics/latticegauge/latticegauge.html" target="_self">Z2 Gauge Theory</a></li>
-			<li><a href="notes/physics/other/other.html" target="_self">others...</a></li>
+			<li><a href="notes/physics/spin_wave/draft.pdf" target="_self">Spin Wave Theory (PDF)</a></li>
+			<li><a href="notes/index.html" target="_self">More-></a></li>
 		</ul>
 		</nav>
 
@@ -91,7 +91,7 @@
 		<ul>
 			<li><a href="notes/math/group/group.html" target="_self">Group Theory</a></li>
 			<li><a href="notes/math/category/category.html" target="_self">Category Theory</a></li>
-			<li><a href="notes/math/other/other.html" target="_self">others...</a></li>
+			<li><a href="notes/index.html" target="_self">More-></a></li>
 		</ul>
 		</nav>
 		<h2>Notes on Programming</h2>
@@ -102,7 +102,7 @@
 			<li><a href="notes/programming/cpp/cpp.html" target="_self">C++</a></li>
 			<li><a href="notes/programming/julia/julia.html" target="_self">Julia</a></li>
 			<li><a href="notes/programming/perl/perl.html" target="_self">Perl</a></li>
-			<li><a href="notes/programming/other/other.html" target="_self">others...</a></li>
+			<li><a href="notes/index.html" target="_self">More-></a></li>
 		</ul>
 		</nav>
 		<h2>My Favorites</h2> 
