--- a/notes/index.html
+++ b/notes/index.html
@@ -11,22 +11,21 @@
 		<font face = "bookman">
 		<font size = 4>
 			<!--<a href="TWF.html">This&nbsp;Week's&nbsp;Finds</a> &nbsp;&nbsp; &nbsp;&nbsp; -->
-		<a href="fun/">Fun&nbsp;Stuff</a>&nbsp;&nbsp;&nbsp;&nbsp;
-		<a href="serious/">Serious&nbsp;Stuff</a>&nbsp;&nbsp;&nbsp;&nbsp;
 		<!-- <a href="TALKS.html"Talks</a>&nbsp;&nbsp;&nbsp;&nbsp; -->
 		<!-- <a href="QG.html">Seminar</a>&nbsp;&nbsp;&nbsp;&nbsp; -->
 		<!--<a href="diary/index.html#now">Diary</a>&nbsp;&nbsp;&nbsp;&nbsp; -->
 		<!--<a href="https://twitter.com/johncarlosbaez">Twitter</a> 
 	  &nbsp;&nbsp;&nbsp;&nbsp;-->
-		<a href="notes/index.html">Notes</a>
+	        <a href="../gleanings/index.html">Gleanings</a>&nbsp;&nbsp;&nbsp;&nbsp;
+		<a href="../notes/index.html">Notes</a>
 		&nbsp;&nbsp;&nbsp;&nbsp;
 		<!--<a href="http://www.azimuthproject.org/azimuth/show/HomePage">Azimuth Project</a>
 	  &nbsp;&nbsp;&nbsp;&nbsp; -->
 		<!--a href = "http://blogs.ams.org/visualinsight/">Visual Insight</a>
 	  &nbsp;&nbsp;&nbsp;&nbsp;-->
-	        <a href="publications/">Publications</a>&nbsp;&nbsp;&nbsp;&nbsp;
+	        <a href="../publications/">Publications</a>&nbsp;&nbsp;&nbsp;&nbsp;
 	        <a href="https://github.com/fengshi96">Github</a>&nbsp;&nbsp;&nbsp;&nbsp;
-	        <a href="cv/">CV</a>&nbsp;&nbsp;&nbsp;&nbsp;
+	        <a href="../cv/CV2021.pdf">CV</a>&nbsp;&nbsp;&nbsp;&nbsp;
 		</font>
 		<hr>
 
@@ -34,12 +33,14 @@
 		<nav>
 			Here are some of my notes on topics of physics. 
 		<ul>
-			<li><a href="notes/physics/entanglement/entanglement.html" target="_self">Entanglement</a></li>
-			<li><a href="notes/physics/mcmc/mcmc.html" target="_self">Markov Chain Monte Carlo</a>
-			<a href="notes/physics/mcmc/mcmc.pdf" target="_self">(PDF)</a></li>
+			<li><a href="physics/entanglement/entanglement.html" target="_self">Entanglement</a></li>
+			<li><a href="physics/mcmc/mcmc.html" target="_self">Markov Chain Monte Carlo</a>
+			<a href="physics/mcmc/mcmc.pdf" target="_self">(PDF)</a></li>
 
-			<li><a href="notes/physics/latticegauge/latticegauge.html" target="_self">Z2 Gauge Theory</a></li>
-			<li><a href="notes/physics/other/other.html" target="_self">others...</a></li>
+			<li><a href="physics/kitaev_qsl_2/draft.pdf" target="_self">Kitaev Spin Liquid 2 (PDF)</a></li>
+			<li><a href="physics/kitaev_qsl_1/draft.pdf" target="_self">Kitaev Spin Liquid 1 (PDF) </a></li>
+			<li><a href="physics/spin_wave/draft.pdf" target="_self">Spin Wave Theory (PDF) </a></li>
+			<li><a href="physics/latticegauge/latticegauge.html" target="_self">Z2 Gauge Theory</a></li>			
 		</ul>
 		</nav>
 
