--- a/index.html
+++ b/index.html
@@ -60,14 +60,14 @@
 			<dt><strong>Density Matrix Renormalization Group</strong></dt>
 			<dd>
 				<p>
-					TBW
+					TBW..
 				</p>
 			</dd>
 			<br></br>
 			<dt><strong>Tensor Network</strong></dt>
 			<dd>
 				<p>
-					TBW
+					TBW..
 				</p>
 			</dd>
 		</dl>
