--- a/notes/physics/entanglement/entanglement.html
+++ b/notes/physics/entanglement/entanglement.html
@@ -36,6 +36,7 @@
 			<li><a href="basics/draft.pdf" target="_self">Basics (PDF)</a>
 			<li><a href="ent_of_free_fermion/draft.pdf" target="_self">Entanglement of Free Fermionic Systems (PDF)</a></li>
 			<li><a href="ent_from_corr/draft.pdf" target="_self">Entanglement from Correlation (PDF)</a>
+			<li><a href="oscillator/draft.pdf" target="_self">Entanglement of Coupled Harmonic Oscillators (PDF)</a>
 		</ul>
 		</nav>
 
