--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		</font>
 		<hr>
 
-		<h1>Shi Feng (Under Construction)</h1>
+		<h1>Shi Feng</h1>
 		I'm a graduate student of theoretical condensed matter physics at <a href="http://trivediresearch.org.ohio-state.edu/" target="_self">Dr. Trivedi's group</a> in the Ohio State University. I am interested in understanding quantum phase transition, quantum spin liquids and their overlap with quantum information theory.
 	
 
