--- a/gleanings/index.html
+++ b/gleanings/index.html
@@ -1,32 +1,28 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel="stylesheet" href="mystyle.css">
+		<link rel="stylesheet" href="../mystyle.css">
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
 		<title>Index</title>
 	</head>
 
 	<body>
-		<font face = "bookman">
-		<font size = 4>
-			<!--<a href="TWF.html">This&nbsp;Week's&nbsp;Finds</a> &nbsp;&nbsp; &nbsp;&nbsp; -->
-		<!-- <a href="TALKS.html"Talks</a>&nbsp;&nbsp;&nbsp;&nbsp; -->
-		<!-- <a href="QG.html">Seminar</a>&nbsp;&nbsp;&nbsp;&nbsp; -->
-		<!--<a href="diary/index.html#now">Diary</a>&nbsp;&nbsp;&nbsp;&nbsp; -->
-		<!--<a href="https://twitter.com/johncarlosbaez">Twitter</a> 
-	  &nbsp;&nbsp;&nbsp;&nbsp;-->
-	        <a href="../gleanings/index.html">Gleanings</a>&nbsp;&nbsp;&nbsp;&nbsp;
-		<a href="../notes/index.html">Notes</a>
-		&nbsp;&nbsp;&nbsp;&nbsp;
-		<!--<a href="http://www.azimuthproject.org/azimuth/show/HomePage">Azimuth Project</a>
-	  &nbsp;&nbsp;&nbsp;&nbsp; -->
-		<!--a href = "http://blogs.ams.org/visualinsight/">Visual Insight</a>
-	  &nbsp;&nbsp;&nbsp;&nbsp;-->
-	        <a href="../publications/">Publications</a>&nbsp;&nbsp;&nbsp;&nbsp;
-	        <a href="https://github.com/fengshi96">Github</a>&nbsp;&nbsp;&nbsp;&nbsp;
-	        <a href="../cv/CV2021.pdf">CV</a>&nbsp;&nbsp;&nbsp;&nbsp;
-		</font>
+		<header class="navbar">
+			<div class="name"><font size=5>Shi Feng's homepage</font></div>	
+			<nav>
+				<ul class="nav__links">
+				<font size = 4>
+					<li><a href="../index.html">Home</a></li>
+					<li><a href="index.html">Travelogue</a></li>
+					<li><a href="../notes/index.html">Notes</a></li>
+					<li><a href="../publications/index.html">Research</a></li>
+					<li><a href="../cv/CV2022.pdf">CV</a></li>
+				</ul>
+				</font>
+			</nav>
+			<a class="git" href="https://github.com/fengshi96"><button>GitHub</button></a>
+		</header>
 		<hr>
 
 		<nav>
