--- a/index.html
+++ b/index.html
@@ -8,99 +8,39 @@
 	</head>
 
 	<body>
-		<font face = "bookman">
-		<font size = 4>
-			<!--<a href="TWF.html">This&nbsp;Week's&nbsp;Finds</a> &nbsp;&nbsp; &nbsp;&nbsp; -->
-		<!-- <a href="fun/">Fun&nbsp;Stuff</a>&nbsp;&nbsp;&nbsp;&nbsp; -->
-		<!-- <a href="serious/">Serious&nbsp;Stuff</a>&nbsp;&nbsp;&nbsp;&nbsp; -->
-		<!-- <a href="TALKS.html"Talks</a>&nbsp;&nbsp;&nbsp;&nbsp; -->
-		<!-- <a href="QG.html">Seminar</a>&nbsp;&nbsp;&nbsp;&nbsp; -->
-		<!--<a href="diary/index.html#now">Diary</a>&nbsp;&nbsp;&nbsp;&nbsp; -->
-		<!--<a href="https://twitter.com/johncarlosbaez">Twitter</a> 
-	  &nbsp;&nbsp;&nbsp;&nbsp;-->
-	        <a href="gleanings/index.html">Gleanings</a>&nbsp;&nbsp;&nbsp;&nbsp;
-		<a href="notes/index.html">Notes</a>
-		&nbsp;&nbsp;&nbsp;&nbsp;
-		<!--<a href="http://www.azimuthproject.org/azimuth/show/HomePage">Azimuth Project</a>
-	  &nbsp;&nbsp;&nbsp;&nbsp; -->
-		<!--a href = "http://blogs.ams.org/visualinsight/">Visual Insight</a>
-	  &nbsp;&nbsp;&nbsp;&nbsp;-->
-	        <a href="publications/">Publications</a>&nbsp;&nbsp;&nbsp;&nbsp;
-	        <a href="https://github.com/fengshi96">Github</a>&nbsp;&nbsp;&nbsp;&nbsp;
-	        <a href="cv/CV2022.pdf">CV</a>&nbsp;&nbsp;&nbsp;&nbsp;
-		</font>
+		<header>
+			<div class="name"><font size=5>Shi Feng's homepage</font></div>	
+			<nav>
+				<ul class="nav__links">
+				<font size = 4>
+					<li><a href="index.html">Home</a></li>
+					<li><a href="gleanings/index.html">Travelogue</a></li>
+					<li><a href="notes/index.html">Notes</a></li>
+					<li><a href="publications/index.html">Research</a></li>
+					<li><a href="cv/CV2022.pdf">CV</a></li>
+				</ul>
+				</font>
+			</nav>
+			<a class="git" href="https://github.com/fengshi96"><button>GitHub</button></a>
+		</header>
 		<hr>
 
-		<h1>Shi Feng</h1>
+		<p class="texts">
 		I'm a graduate student of theoretical condensed matter physics at <a href="http://trivediresearch.org.ohio-state.edu/" target="_self">Dr. Trivedi's group</a> in the Ohio State University. I am interested in understanding quantum phase transition, quantum spin liquids and their overlap with quantum information theory.
-	
-
-		<h2>Topics</h2>
-		<dl>
-			<dt><strong>Quantum Spin Liquids</strong></dt>
-			<dd>
-				<aside>
-					<img src="figures/qsl.jpg" alt="qsl figure" style="width:100%;height:100%;">
-					<p>Geometrically frustrated spins on a triangular lattice</p>
-				</aside>
-				<p> 
-					Beyond solids, liquids and gas, there are numerous <em>quantum phases</em> of mater which lie beyond classic symmetry-breaking paradigm. Quantum spin liquids (QSLs) being among them. QSLs are exotic phases of matter that can show up in some frustrated magnetic (or qubit) systems characterized by a lack of long-range magnetic order down to extremely low temperatures (unlike with conventional magnets) due to strong quantum fluctuations. 
-				</p>
-				<p>
-					In addition to this negative definition, QSLs are also characterized by some global invariant, known as topological entanglement, emergent abelian or non-abelian quasi-particles with fractionalized statistics, and ground state degeneracy connected with emergent gauge theories. 
-				</p>
-				<figure>
-				<img src="figures/torus.svg" alt="Degenercy on Torus" style="width:60%">
-				<figcaption>QSLs on 2D lattice can have distinct topologically invariant states of different gauge-equivalent classes </figcaption>
-				</figure>
+		</p>	
 
 
-			</dd>
-			<br></br>
-			<dt><strong>Density Matrix Renormalization Group</strong></dt>
-			<dd>
-				<p>
-					TBW..
-				</p>
-			</dd>
-			<br></br>
-			<dt><strong>Tensor Network</strong></dt>
-			<dd>
-				<p>
-					TBW..
-				</p>
-			</dd>
-		</dl>
 
-		<h2>Notes on Physics</h2>
-		<nav>
-			Here are some of my notes on topics of physics. 
-		<ul>
-			<li><a href="notes/physics/entanglement/entanglement.html" target="_self">Entanglement</a></li>
-			<li><a href="notes/physics/mcmc/mcmc.html" target="_self">Markov Chain Monte Carlo</a>
-			<a href="notes/physics/mcmc/mcmc.pdf" target="_self">(PDF)</a></li>
+		<h1 class="publist">Publications</h1>
+		<li class="publist"> [8] <b>S. Feng</b>, D. Kong, N. Trivedi. A statistical approach to topological entanglement: Boltzmann machine representation of higher-order correlation and interaction.</li>
+		<li class="publist"> [7] <b>S. Feng</b>, A. Agarwala, S. Bhattacharjee, N. Trivedi. Discovery of novel topological phases in the anisotropic Kitaev model in a field. <a href="https://arxiv.org/abs/2206.12990">arXiv:2206.12990 (2022)</a></li>
+		<li class="publist"> [6] <b>S. Feng</b>, Y. He, N. Trivedi. Detection of long-range entanglement in gapped quantum spin liquids by local measurements. <a href="https://journals.aps.org/pra/abstract/10.1103/PhysRevA.106.042417">Phys. Rev. A 106, 042417 (2022)</a> </li>
+		<li class="publist"> [5] <b>S. Feng</b>, G. Alvarez, N. Trivedi. Gapless to gapless phase transitions in quantum spin chains. <a href="https://journals.aps.org/prb/abstract/10.1103/PhysRevB.105.014435">Phys. Rev. B 105, 014435 (2022)</a></li>
+		<li class="publist"> [4] <b>S. Feng</b>, N. D. Patel, P. Kim, J. H. Han, N. Trivedi. Magnetic phase transitions in quantum spin-orbital liquids. <a href="https://journals.aps.org/prb/abstract/10.1103/PhysRevB.101.155112">Phys. Rev. B, 101:155112 (2020)</a></li>
+		<li class="publist"> [3] T. Xiao, J. Wang, S. Yang, Y. Zhu, D. Li, Z. Wang, <b>S. Feng</b>, L. Bu, X. Zhan, G. Lu. Film-depth-dependent Crystallinity for Light Transmission and Charge Transport in Semitransparent Organic Solar Cells. <a href="https://pubs.rsc.org/en/content/articlelanding/2020/ta/c9ta11613c">Journal of Materials Chemistry, A, 2020, 8, 401 (2020)</a></li>
+		<li class="publist"> [2] D. Li, S. Li, W. Lu, <b>S. Feng</b>, P. Wei, Y. Hu, X. Wang, G. Lu. Rapidly measuring charge carrier mobility of organic semiconductor films upon a point-contact four-probes Method. <a href="https://ieeexplore.ieee.org/document/8476973" >IEEE J-EDS 2018.2872714 (2018)</a></li>
+		<li class="publist"> [1] L. Bu, S. Gao, W. Wang, L. Zhou, <b>S. Feng</b>, X. Chen, D. Yu, S. Li, G. Lu. Film-depth-dependent light absorption and charge transport for polymer electronics. <a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/aelm.201600359">Adv. Electron. Mater 2:1600359 (2016)</a></li>
 
-			<li><a href="notes/physics/spin_wave/draft.pdf" target="_self">Spin Wave Theory (PDF)</a></li>
-			<li><a href="notes/index.html" target="_self">More-></a></li>
-		</ul>
-		</nav>
-
-		<h2>Notes on Math</h2>
-		<nav>
-			Here are some of my notes on mathematics. 
-		<ul>
-			<li><a href="notes/math/group/group.html" target="_self">Group Theory</a></li>
-			<li><a href="notes/math/category/category.html" target="_self">Category Theory</a></li>
-			<li><a href="notes/index.html" target="_self">More-></a></li>
-		</ul>
-		</nav>
-		
-		<h2>My Favorites</h2> 
-		<ul>
-			<li><a href="https://www.quantamagazine.org/" target="_self">Quanta Magazine</a></li>
-			<li><a href = "http://golem.ph.utexas.edu/category/">n-Category Caf&eacute;</a>, a group blog on math, physics and philosophy </li>
-		</ul>
-		<br></br>
 	</body>
 
 	
