--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	</head>
 
 	<body>
-		<header>
+		<header class="navbar">
 			<div class="name"><font size=5>Shi Feng's homepage</font></div>	
 			<nav>
 				<ul class="nav__links">
