--- a/gleanings/index.html
+++ b/gleanings/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel="stylesheet" href="../mystyle.css">
+		<link rel="stylesheet" href="style.css">
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
 		<title>Index</title>
@@ -25,13 +25,20 @@
 		</header>
 		<hr>
 
-		<nav>
-			Here are some of my interesting findings .. 
-		<ul>
-			<li><a href="homo_sl_lorentz/draft.pdf" target="_self">A Homomorphism between SL(2,C) and Lorentz Group (PDF)</a></li>	
-			<li><a href="pauli_id/draft.pdf" target="_self">An Interesting Proof of Pauli Identity (PDF)</a></li>	
-			<li><a href="kl_div_phys/draft.pdf" target="_self">Physical Interpretation of KL Divergence (PDF)</a></li>		
-		</ul>
+		<p class="texts">
+		Here are some of my gleanings in my study, leisure reading, random discussion with friends, as well as sporadic ideas and derivations that I would like to record. A few of them could offer some interesting intuition, yet more (or perhaps most) of them are trivial, though, they are texts that I wished I had access to when I started my journey in college; or interesting nuggets of thougths that I would like to share with friends and colleagues.    
+		</p>
+		<nav class="nav__finding">
+			<li><a href="song2021/draft.pdf" target="_self">A thermodynamic perspective on the score-based generative model</a></li>	
+			<li><a href="jay/draft.pdf" target="_self">A sorting problem raised by Jaychandran and my answer to it</a></li>	
+			<li><a href="homo_sl_lorentz/draft.pdf" target="_self">A homomorphism between sl(2,c) and lorentz group</a></li>	
+			<li><a href="pauli_id/draft.pdf" target="_self">An interesting proof of pauli identity</a></li>	
+			<li><a href="kl_div_phys/draft.pdf" target="_self">The physical interpretation of Kullback–Leibler divergence</a></li>		
+			<li><a href="flow/draft.pdf" target="_self">Probabilistic normalizing flows</a></li>	
+			<li><a href="boringH/draft.pdf" target="_self">Some boring Hamiltonians and their solutions</a></li>	
+			<li><a href="blackbody/draft.pdf" target="_self">The spectrum of the black body radiation</a></li>	
+			<li><a href="partialdiff/draft.pdf" target="_self">The game of partial derivatives in thermodynamics</a></li>	
+			<li><a href="newtonIter/draft.pdf" target="_self">Newton's and Steffensen's methods for solving non-linear equations (in Chinese)</a></li>	
 		</nav>
 
 
