--- a/notes/index.html
+++ b/notes/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel="stylesheet" href="../mystyle.css">
+		<link rel="stylesheet" href="style.css">
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
 		<title>Index</title>
@@ -14,8 +14,8 @@
 				<ul class="nav__links">
 				<font size = 4>
 					<li><a href="../index.html">Home</a></li>
-					<li><a href="index.html">Travelogue</a></li>
-					<li><a href="../notes/index.html">Notes</a></li>
+					<li><a href="../index.html">Travelogue</a></li>
+					<li><a href="index.html">Notes</a></li>
 					<li><a href="../publications/index.html">Research</a></li>
 					<li><a href="../cv/CV2022.pdf">CV</a></li>
 				</ul>
@@ -25,42 +25,26 @@
 		</header>
 		<hr>
 
-	<h2>Notes on Physics</h2>
-		<nav>
-			Here are some of my notes on topics of physics. 
+		<p class="texts">
+			Here are some of my notes on different topics of physics. 
+		</p>
+		<nav class="nav__notes">
 		<ul>
-			<li><a href="physics/entanglement/entanglement.html" target="_self">Entanglement</a></li>
-			<li><a href="physics/mcmc/mcmc.html" target="_self">Markov Chain Monte Carlo</a>
-			<a href="physics/mcmc/mcmc.pdf" target="_self">(PDF)</a></li>
-
-			<li><a href="physics/kitaev_qsl_2/draft.pdf" target="_self">Kitaev Spin Liquid 2 (PDF)</a></li>
-			<li><a href="physics/kitaev_qsl_1/draft.pdf" target="_self">Kitaev Spin Liquid 1 (PDF) </a></li>
-			<li><a href="physics/spin_wave/draft.pdf" target="_self">Spin Wave Theory (PDF) </a></li>
-			<li><a href="physics/latticegauge/latticegauge.html" target="_self">Z2 Gauge Theory</a></li>			
+			<li><a href="physics/topomagnon/draft.pdf" target="_self">Topological magnons: concepts and phenomenology</a></li>
+			<li><a href="physics/entanglement/ent_of_free_fermion/draft.pdf" target="_self">Entanglement of free fermions</a></li>
+			<li><a href="physics/entanglement/oscillator/draft.pdf" target="_self">Entanglement of coupled oscillators</a></li>
+			<li><a href="physics/entanglement/ent_from_corr/draft.pdf" target="_self">Extract entanglement from correlation matrix</a></li>
+			<li><a href="physics/entanglement/basics/draft.pdf" target="_self">Basics of quantum entanglement</a></li>
+			<li><a href="physics/rbm/draft.pdf" target="_self">Restricted Boltzmann Machine</a></li>
+			<li><a href="physics/mcmc/mcmc.pdf" target="_self">Markov Chain Monte Carlo</a></li>
+			<li><a href="physics/kitaev_qsl_2/draft.pdf" target="_self">Kitaev spin liquid II</a></li>
+			<li><a href="physics/kitaev_qsl_1/draft.pdf" target="_self">Kitaev spin liquid I </a></li>
+			<li><a href="physics/tfim/draft.pdf" target="_self">Ising model under transverse field</a></li>
+			<li><a href="physics/spin_wave/draft.pdf" target="_self">Spin wave theory </a></li>
+			<li><a href="physics/noether/draft.pdf" target="_self">Noether theorem </a></li>
 		</ul>
 		</nav>
 
-		<h2>Notes on Math</h2>
-		<nav>
-			Here are some of my notes on mathematics. 
-		<ul>
-			<li><a href="notes/math/group/group.html" target="_self">Group Theory</a></li>
-			<li><a href="notes/math/category/category.html" target="_self">Category Theory</a></li>
-			<li><a href="notes/math/other/other.html" target="_self">others...</a></li>
-		</ul>
-		</nav>
-		<h2>Notes on Programming</h2>
-		<nav>
-			Here are some of my notes on coding. 
-		<ul>
-			<li><a href="notes/programming/python/python.html" target="_self">Python</a></li>
-			<li><a href="notes/programming/cpp/cpp.html" target="_self">C++</a></li>
-			<li><a href="notes/programming/julia/julia.html" target="_self">Julia</a></li>
-			<li><a href="notes/programming/perl/perl.html" target="_self">Perl</a></li>
-			<li><a href="notes/programming/other/other.html" target="_self">others...</a></li>
-		</ul>
-		</nav>
-		<br></br>
 	</body>
 
 	
