--- a/publications/index.html
+++ b/publications/index.html
@@ -1,33 +1,31 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel="stylesheet" href="../mystyle.css">
+		<link rel="stylesheet" href="style.css">
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
 		<title>Index</title>
 	</head>
 
 	<body>
-		<header>
+		<header class="navbar">
 			<font size=5>Shi Feng's homepage</font>	
 			<nav>
 				<ul class="nav__links">
 				<font size = 4>
-					<li><a href="index.html">Home</a></li>
-					<li><a href="gleanings/index.html">Travelogue</a></li>
-					<li><a href="notes/index.html">Notes</a></li>
-					<li><a href="publications">Research</a></li>
-					<li><a href="cv/CV2022.pdf">CV</a></li>
+					<li><a href="../index.html">Home</a></li>
+					<li><a href="../gleanings/index.html">Travelogue</a></li>
+					<li><a href="../notes/index.html">Notes</a></li>
+					<li><a href="index.html">Research</a></li>
+					<li><a href="../cv/CV2022.pdf">CV</a></li>
 				</ul>
 				</font>
 			</nav>
 			<a class="git" href="https://github.com/fengshi96"><button>GitHub</button></a>
 		</header>
 	
-
-		<h2>Topics</h2>
-		<dl>
-			<dt><strong>Quantum Spin Liquids</strong></dt>
+		<p class="texts">
+			<strong>Quantum Spin Liquids</strong>
 			<dd>
 				<aside>
 					<img src="figures/qsl.jpg" alt="qsl figure" style="width:100%;height:100%;">
@@ -46,6 +44,8 @@
 
 
 			</dd>
+		</p>
+
 	</body>
 
 	
