--- a/notes/index.html
+++ b/notes/index.html
@@ -14,7 +14,7 @@
 				<ul class="nav__links">
 				<font size = 4>
 					<li><a href="../index.html">Home</a></li>
-					<li><a href="../index.html">Travelogue</a></li>
+					<li><a href="../gleanings/index.html">Travelogue</a></li>
 					<li><a href="index.html">Notes</a></li>
 					<li><a href="../publications/index.html">Research</a></li>
 					<li><a href="../cv/CV2022.pdf">CV</a></li>
