--- a/gleanings/index.html
+++ b/gleanings/index.html
@@ -4,7 +4,7 @@
 		<link rel="stylesheet" href="style.css">
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
-		<title>Index</title>
+		<title>Shi Feng's Travelogue</title>
 	</head>
 
 	<body>
