--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<link rel="stylesheet" href="mystyle.css">
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
-		<title>Index</title>
+		<title>Shi Feng's Homepage</title>
 	</head>
 
 	<body>
