--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
 
 
 		<h1 class="publist">Publications</h1>
-		<li class="publist"> [8] <b>S. Feng</b>, D. Kong, N. Trivedi. A statistical approach to topological entanglement: Boltzmann machine representation of higher-order irreducible correlation.</li>
-		<li class="publist"> [7] <b>S. Feng</b>, A. Agarwala, S. Bhattacharjee, N. Trivedi. Discovery of novel topological phases in the anisotropic Kitaev model in a field. <a href="https://arxiv.org/abs/2206.12990">arXiv:2206.12990 (2022)</a></li>
+		<li class="publist"> [9] <b>S. Feng</b>, A. Agarwala, N. Trivedi. Dimensional reduction of Kitaev spin liquid under [001] magnetic field. In preparation</li>
+		<li class="publist"> [8] <b>S. Feng</b>, D. Kong, N. Trivedi. A statistical approach to topological entanglement: Boltzmann machine representation of higher-order irreducible correlation. In preparation</li>
+		<li class="publist"> [7] <b>S. Feng</b>, A. Agarwala, S. Bhattacharjee, N. Trivedi. Anyon dynamics in field-driven phases of the anisotropic Kitaev model. <a href="https://arxiv.org/abs/2206.12990">arXiv:2206.12990 (2022)</a></li>
 		<li class="publist"> [6] <b>S. Feng</b>, Y. He, N. Trivedi. Detection of long-range entanglement in gapped quantum spin liquids by local measurements. <a href="https://journals.aps.org/pra/abstract/10.1103/PhysRevA.106.042417">Phys. Rev. A 106, 042417 (2022)</a> </li>
 		<li class="publist"> [5] <b>S. Feng</b>, G. Alvarez, N. Trivedi. Gapless to gapless phase transitions in quantum spin chains. <a href="https://journals.aps.org/prb/abstract/10.1103/PhysRevB.105.014435">Phys. Rev. B 105, 014435 (2022)</a></li>
 		<li class="publist"> [4] <b>S. Feng</b>, N. D. Patel, P. Kim, J. H. Han, N. Trivedi. Magnetic phase transitions in quantum spin-orbital liquids. <a href="https://journals.aps.org/prb/abstract/10.1103/PhysRevB.101.155112">Phys. Rev. B, 101:155112 (2020)</a></li>
