--- a/notes/index.html
+++ b/notes/index.html
@@ -42,6 +42,7 @@
 			<li><a href="physics/tfim/draft.pdf" target="_self">Ising model under transverse field</a></li>
 			<li><a href="physics/spin_wave/draft.pdf" target="_self">Spin wave theory </a></li>
 			<li><a href="physics/noether/draft.pdf" target="_self">Noether theorem </a></li>
+			<li><a href="physics/group/draft.pdf" target="_self">Group theory </a></li>
 		</ul>
 		</nav>
 
