--- a/gleanings/index.html
+++ b/gleanings/index.html
@@ -34,9 +34,10 @@
 			<li><a href="homo_sl_lorentz/draft.pdf" target="_self">A homomorphism between sl(2,c) and lorentz group</a></li>	
 			<li><a href="pauli_id/draft.pdf" target="_self">An interesting proof of pauli identity</a></li>	
 			<li><a href="kl_div_phys/draft.pdf" target="_self">The physical interpretation of Kullback–Leibler divergence</a></li>		
-			<li><a href="flow/draft.pdf" target="_self">Probabilistic normalizing flows</a></li>	
-			<li><a href="boringH/draft.pdf" target="_self">Some boring Hamiltonians and their solutions</a></li>	
+			<li><a href="flow/draft.pdf" target="_self">Probabilistic normalizing flows</a></li>
 			<li><a href="blackbody/draft.pdf" target="_self">The spectrum of the black body radiation</a></li>	
+			<li><a href="boringH/draft.pdf" target="_self">Some boring Hamiltonians and their solutions</a></li>	
+			<li><a href="burnside/draft.pdf" target="_self">Burnside’s Lemma</a></li>	
 			<li><a href="partialdiff/draft.pdf" target="_self">The game of partial derivatives in thermodynamics</a></li>	
 			<li><a href="newtonIter/draft.pdf" target="_self">Newton's and Steffensen's methods for solving non-linear equations (in Chinese)</a></li>	
 		</nav>
