--- a/resources/index.html
+++ b/resources/index.html
@@ -56,7 +56,7 @@
 			<li><a href="slides/JournalClb_Anyon.pdf" target="_self">Observation of anyonic braiding in fractional quantum Hall system</a></li>
 			<li><a href="slides/kitaevSolution.pdf" target="_self">Exact solution of quantum spin liquids in Kitaev’s honeycomb model</a></li>
 			<li><a href="slides/gapless2gapless_2021.pdf" target="_self">Gapless to gapless phase transitions in quantum spin chains </a><a href="https://meetings.aps.org/Meeting/MAR21/Session/E43.13" target="_self">(APS March Meeting, 2021)</a></li> 
-			<li><a href="slides/d4Phases_2020.pdf" target="_self">Magnetic Phase Transitions in 5d4 Quantum Spin-orbital Liquid </a><a href="https://research.kent.ac.uk/pqm/condensed-matter-physics-in-the-cities-2020/condensed-matter-physics-in-all-the-cities-prerecorded-video-talks/#Feng" target="_self">(University of Kent, 2020)</a></li>
+			<li><a href="slides/d4Phases_2020.pdf" target="_self">Magnetic phase transitions in 5d4 quantum spin-orbital liquid </a><a href="https://research.kent.ac.uk/pqm/condensed-matter-physics-in-the-cities-2020/condensed-matter-physics-in-all-the-cities-prerecorded-video-talks/#Feng" target="_self">(University of Kent, 2020)</a></li>
 			<li><a href="slides/tc.pdf" target="_self">Introduction to Toric Code </a></li>
 		</ul>
 		</nav>
