--- a/resources/index.html
+++ b/resources/index.html
@@ -43,6 +43,7 @@
 			<li><a href="notes/spin_wave/draft.pdf" target="_self">Spin wave theory </a></li>
 			<li><a href="notes/noether/draft.pdf" target="_self">Noether theorem </a></li>
 			<li><a href="notes/group/draft.pdf" target="_self">Group theory </a></li>
+			<li><a href="notes/IsingMFT/draft.pdf" target="_self">Mean field theory for the classical Ising model </a></li>
 		</ul>
 		</nav>
 		
