--- a/publications/index.html
+++ b/publications/index.html
@@ -9,7 +9,7 @@
 
 	<body>
 		<header class="navbar">
-			<font size=5>Shi Feng's homepage</font>	
+			<div class="name"><font size=5>Shi Feng's homepage</font></div>	
 			<nav>
 				<ul class="nav__links">
 				<font size = 4>
@@ -25,20 +25,17 @@
 		</header>
 	
 		<p class="texts">
-			<strong>Quantum Spin Liquids</strong>
-			<dd>
-				<aside>
-					<img src="figures/qsl.jpg" alt="qsl figure" style="width:100%;height:100%;">
-					<p>Geometrically frustrated spins on a triangular lattice</p>
-				</aside>
-				<p> 
+			<strong>Quantum Spin Liquids</strong>			
+				<p class="texts"> 
 					Beyond solids, liquids and gas, there are numerous <em>quantum phases</em> of mater which lie beyond classic symmetry-breaking paradigm. Quantum spin liquids (QSLs) being among them. QSLs are exotic phases of matter that can show up in some frustrated magnetic (or qubit) systems characterized by a lack of long-range magnetic order down to extremely low temperatures (unlike with conventional magnets) due to strong quantum fluctuations. 
 				</p>
-				<p>
+				<img src="figures/qsl.jpg" alt="qsl figure" style="width:70%;height:70%;" class="center">
+				<figcaption>Geometrically frustrated spins on a triangular lattice</figcaption>
+				<p class="texts">
 					In addition to this negative definition, QSLs are also characterized by some global invariant, known as topological entanglement, emergent abelian or non-abelian quasi-particles with fractionalized statistics, and ground state degeneracy connected with emergent gauge theories. 
 				</p>
 				<figure>
-				<img src="figures/torus.svg" alt="Degenercy on Torus" style="width:60%">
+				<img src="figures/torus.svg" alt="Degenercy on Torus" style="width:80%"  class="center">
 				<figcaption>QSLs on 2D lattice can have distinct topologically invariant states of different gauge-equivalent classes </figcaption>
 				</figure>
 
