--- a/gleanings/index.html
+++ b/gleanings/index.html
@@ -36,6 +36,7 @@
 			<li><a href="kl_div_phys/draft.pdf" target="_self">The physical interpretation of Kullback–Leibler divergence</a></li>		
 			<li><a href="flow/draft.pdf" target="_self">Probabilistic normalizing flows</a></li>
 			<li><a href="blackbody/draft.pdf" target="_self">The spectrum of the black body radiation</a></li>	
+			<li><a href="screening/draft.pdf" target="_self">Screening of Coulomb interaction in Fermi Liquid</a></li>	
 			<li><a href="boringH/draft.pdf" target="_self">Some boring Hamiltonians and their solutions</a></li>	
 			<li><a href="burnside/draft.pdf" target="_self">Burnside’s Lemma</a></li>	
 			<li><a href="partialdiff/draft.pdf" target="_self">The game of partial derivatives in thermodynamics</a></li>	
