--- a/gleanings/index.html
+++ b/gleanings/index.html
@@ -26,7 +26,7 @@
 		<hr>
 
 		<p class="texts">
-		Here are some of my gleanings in my study, leisure reading, random discussion with friends, as well as sporadic ideas and derivations that I would like to record. A few of them could offer some interesting intuition, yet more (or perhaps most) of them are trivial, though, they are texts that I wished I had access to when I started my journey in college; or interesting nuggets of thougths that I would like to share with friends and colleagues.    
+		Here are some of my gleanings in my study, teaching, leisure reading, random discussion with friends, as well as sporadic ideas and derivations that I would like to record. A few of them could offer some interesting intuition, yet more (or perhaps most) of them are trivial, though, they are texts that I wished I had access to when I started my journey in college; or interesting nuggets of thougths that I would like to share with friends and colleagues.    
 		</p>
 		<nav class="nav__finding">
 			<li><a href="song2021/draft.pdf" target="_self">A thermodynamic perspective on the score-based generative model</a></li>	
