--- a/gleanings/index.html
+++ b/gleanings/index.html
@@ -17,7 +17,7 @@
 					<li><a href="index.html">Travelogue</a></li>
 					<li><a href="../archive/index.html">Archive</a></li>
 					<li><a href="../publications/index.html">Research</a></li>
-					<li><a href="../cv/CV2022.pdf">CV</a></li>
+					<li><a href="../cv/CV_lastest.pdf">CV</a></li>
 				</ul>
 				</font>
 			</nav>
