--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 					<li><a href="gleanings/index.html">Travelogue</a></li>
 					<li><a href="archive/index.html">Archive</a></li>
 					<li><a href="publications/index.html">Research</a></li>
-					<li><a href="cv/CV2022.pdf">CV</a></li>
+					<li><a href="cv/CV_lastest.pdf">CV</a></li>
 				</ul>
 				</font>
 			</nav>
@@ -33,7 +33,7 @@
 
 		<h1 class="publist">Publications</h1>
 		<li class="publist"> [9] <b>S. Feng</b>, A. Agarwala, N. Trivedi. Dimensional reduction of Kitaev spin liquid under [001] magnetic field. In preparation</li>
-		<li class="publist"> [8] <b>S. Feng</b>, D. Kong, N. Trivedi. A statistical approach to topological entanglement: Boltzmann machine representation of higher-order irreducible correlation. In preparation</li>
+		<li class="publist"> [8] <b>S. Feng</b>, D. Kong, N. Trivedi. A statistical approach to topological entanglement: Boltzmann machine representation of higher-order irreducible correlation. <a href="https://arxiv.org/abs/2302.03212">arXiv:2302.03212 (2023)</a></li>
 		<li class="publist"> [7] <b>S. Feng</b>, A. Agarwala, S. Bhattacharjee, N. Trivedi. Anyon dynamics in field-driven phases of the anisotropic Kitaev model. <a href="https://arxiv.org/abs/2206.12990">arXiv:2206.12990 (2022)</a></li>
 		<li class="publist"> [6] <b>S. Feng</b>, Y. He, N. Trivedi. Detection of long-range entanglement in gapped quantum spin liquids by local measurements. <a href="https://journals.aps.org/pra/abstract/10.1103/PhysRevA.106.042417">Phys. Rev. A 106, 042417 (2022)</a> </li>
 		<li class="publist"> [5] <b>S. Feng</b>, G. Alvarez, N. Trivedi. Gapless to gapless phase transitions in quantum spin chains. <a href="https://journals.aps.org/prb/abstract/10.1103/PhysRevB.105.014435">Phys. Rev. B 105, 014435 (2022)</a></li>
