--- a/gleanings/index.html
+++ b/gleanings/index.html
@@ -29,6 +29,7 @@
 		Here are some of my gleanings in my study, teaching, leisure reading, random discussion with friends, as well as sporadic ideas and derivations that I would like to record. A few of them could offer some interesting intuition, yet more (or perhaps most) of them are trivial, though, they are texts that I wished I had access to when I started my journey in college; or interesting nuggets of thougths that I would like to share with friends and colleagues.    
 		</p>
 		<nav class="nav__finding">
+			<li><a href="ent_in_time/draft.pdf" target="_self">Entanglement in time</a></li>	
 			<li><a href="song2021/draft.pdf" target="_self">A thermodynamic perspective on the score-based generative model</a></li>	
 			<li><a href="jay/draft.pdf" target="_self">A sorting problem raised by Jaychandran and my answer to it</a></li>	
 			<li><a href="homo_sl_lorentz/draft.pdf" target="_self">A homomorphism between sl(2,c) and lorentz group</a></li>	
