--- a/index.html
+++ b/index.html
@@ -26,21 +26,11 @@
 		<hr>
 
 		<p class="texts">
-		I'm a graduate student of theoretical condensed matter physics at <a href="http://trivediresearch.org.ohio-state.edu/" target="_self">Dr. Trivedi's group</a> in the Ohio State University. I am interested in understanding quantum phase transition, quantum spin liquids and their overlap with quantum information theory.
+		I'm a graduate student of theoretical condensed matter physics at <a href="http://trivediresearch.org.ohio-state.edu/" target="_self">Dr. Trivedi's group</a> in the Ohio State University. I am interested in understanding quantum phase transition, quantum spin liquids and their overlap with quantum information theory. When I am not hard at work, you can find me at the Union Cemetery.
 		</p>	
 
 
 
-		<h1 class="publist">Publications</h1>
-		<li class="publist"> [9] <b>S. Feng</b>, A. Agarwala, N. Trivedi. Dimensional reduction of Kitaev spin liquid under [001] magnetic field. In preparation</li>
-		<li class="publist"> [8] <b>S. Feng</b>, D. Kong, N. Trivedi. A statistical approach to topological entanglement: Boltzmann machine representation of higher-order irreducible correlation. <a href="https://arxiv.org/abs/2302.03212">arXiv:2302.03212 (2023)</a></li>
-		<li class="publist"> [7] <b>S. Feng</b>, A. Agarwala, S. Bhattacharjee, N. Trivedi. Anyon dynamics in field-driven phases of the anisotropic Kitaev model. <a href="https://arxiv.org/abs/2206.12990">arXiv:2206.12990 (2022)</a></li>
-		<li class="publist"> [6] <b>S. Feng</b>, Y. He, N. Trivedi. Detection of long-range entanglement in gapped quantum spin liquids by local measurements. <a href="https://journals.aps.org/pra/abstract/10.1103/PhysRevA.106.042417">Phys. Rev. A 106, 042417 (2022)</a> </li>
-		<li class="publist"> [5] <b>S. Feng</b>, G. Alvarez, N. Trivedi. Gapless to gapless phase transitions in quantum spin chains. <a href="https://journals.aps.org/prb/abstract/10.1103/PhysRevB.105.014435">Phys. Rev. B 105, 014435 (2022)</a></li>
-		<li class="publist"> [4] <b>S. Feng</b>, N. D. Patel, P. Kim, J. H. Han, N. Trivedi. Magnetic phase transitions in quantum spin-orbital liquids. <a href="https://journals.aps.org/prb/abstract/10.1103/PhysRevB.101.155112">Phys. Rev. B, 101:155112 (2020)</a></li>
-		<li class="publist"> [3] T. Xiao, J. Wang, S. Yang, Y. Zhu, D. Li, Z. Wang, <b>S. Feng</b>, L. Bu, X. Zhan, G. Lu. Film-depth-dependent Crystallinity for Light Transmission and Charge Transport in Semitransparent Organic Solar Cells. <a href="https://pubs.rsc.org/en/content/articlelanding/2020/ta/c9ta11613c">Journal of Materials Chemistry, A, 2020, 8, 401 (2020)</a></li>
-		<li class="publist"> [2] D. Li, S. Li, W. Lu, <b>S. Feng</b>, P. Wei, Y. Hu, X. Wang, G. Lu. Rapidly measuring charge carrier mobility of organic semiconductor films upon a point-contact four-probes Method. <a href="https://ieeexplore.ieee.org/document/8476973" >IEEE J-EDS 2018.2872714 (2018)</a></li>
-		<li class="publist"> [1] L. Bu, S. Gao, W. Wang, L. Zhou, <b>S. Feng</b>, X. Chen, D. Yu, S. Li, G. Lu. Film-depth-dependent light absorption and charge transport for polymer electronics. <a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/aelm.201600359">Adv. Electron. Mater 2:1600359 (2016)</a></li>
 
 	</body>
 
