--- a/publications/index.html
+++ b/publications/index.html
@@ -18,10 +18,10 @@
 					<li><a href="../archive/index.html">Archive</a></li>
 					<li><a href="index.html">Research</a></li>
 					<li><a href="../cv/CV_lastest.pdf">CV</a></li>
+					<li><a class="git" href="https://github.com/fengshi96"><button>GitHub</button></a></li>
 				</ul>
 				</font>
 			</nav>
-			<a class="git" href="https://github.com/fengshi96"><button>GitHub</button></a>
 		</header>
 		<h1 class="publist">Publications</h1>
 		<li class="publist"> [9] <b>S. Feng</b>, A. Agarwala, N. Trivedi. Dimensional reduction of Kitaev spin liquid under [001] magnetic field. In preparation</li>
