--- a/publications/index.html
+++ b/publications/index.html
@@ -24,7 +24,7 @@
 			</nav>
 		</header>
 		<h1 class="publist">Publications</h1>
-		<li class="publist"> [9] <b>S. Feng</b>, A. Agarwala, N. Trivedi. Dimensional reduction of Kitaev spin liquid under [001] magnetic field. In preparation</li>
+		<li class="publist"> [9] <b>S. Feng</b>, A. Agarwala, N. Trivedi. Dimensional transition from Kitaev spin liquid to decoupled Ising critical chains. In preparation</li>
 		<li class="publist"> [8] <b>S. Feng</b>, D. Kong, N. Trivedi. A statistical approach to topological entanglement: Boltzmann machine representation of higher-order irreducible correlation. <a href="https://arxiv.org/abs/2302.03212">arXiv:2302.03212 (2023)</a></li>
 		<li class="publist"> [7] <b>S. Feng</b>, A. Agarwala, S. Bhattacharjee, N. Trivedi. Anyon dynamics in field-driven phases of the anisotropic Kitaev model. <a href="https://arxiv.org/abs/2206.12990">arXiv:2206.12990 (2022)</a></li>
 		<li class="publist"> [6] <b>S. Feng</b>, Y. He, N. Trivedi. Detection of long-range entanglement in gapped quantum spin liquids by local measurements. <a href="https://journals.aps.org/pra/abstract/10.1103/PhysRevA.106.042417">Phys. Rev. A 106, 042417 (2022)</a> </li>
