--- a/publications/index.html
+++ b/publications/index.html
@@ -93,6 +93,12 @@
 				<p class="journal">In preparation</p>
 			    </div>
 			    
+			    <div class="publication">
+			    <p class="authors">K. Zhang, <span class="my-name">S. Feng</span>, Y. D. Lensky, N. Trivedi, E. A. Kim</p>
+				<p class="title">Machine learning feature discovery of spinon Fermi surface</p>
+				<p class="journal"><a href="https://arxiv.org/abs/2302.03212" class="journal-link">arXiv:2306.03212 (2023)</a></p>
+			    </div>
+			    
 
 			    <div class="publication">
 				<p class="authors"><span class="my-name">S. Feng</span>, D. Kong, N. Trivedi</p>
