--- a/publications/index.html
+++ b/publications/index.html
@@ -89,7 +89,7 @@
 			<div class="publication-list">
 			    <div class="publication">
 				<p class="authors"><span class="my-name">S. Feng</span>, A. Agarwala, N. Trivedi</p>
-				<p class="title">Dimensional transition from Kitaev spin liquid to decoupled Ising critical chains</p>
+				<p class="title">From Kitaev spin liquid to one-dimensional quantum Ising criticality</p>
 				<p class="journal">In preparation</p>
 			    </div>
 			    
@@ -109,7 +109,7 @@
 			    <div class="publication">
 				<p class="authors"><span class="my-name">S. Feng</span>, A. Agarwala, S. Bhattacharjee, N. Trivedi</p>
 				<p class="title">Anyon dynamics in field-driven phases of the anisotropic Kitaev model</p>
-				<p class="journal"><a href="https://arxiv.org/abs/2206.12990" class="journal-link">arXiv:2206.12990 (2022)</a></p>
+				<p class="journal"><a href="https://journals.aps.org/prb/abstract/10.1103/PhysRevB.108.035149" class="journal-link">Phys. Rev. B 108, 035149 (2023)</a></p>
 			    </div>
 			    
 			    <div class="publication">
