--- a/publications/index.html
+++ b/publications/index.html
@@ -89,8 +89,8 @@
 			<div class="publication-list">
 			    <div class="publication">
 				<p class="authors"><span class="my-name">S. Feng</span>, A. Agarwala, N. Trivedi</p>
-				<p class="title">From Kitaev spin liquid to one-dimensional quantum Ising criticality</p>
-				<p class="journal">In preparation</p>
+				<p class="title">Dimensional reduction of Kitaev spin liquid at quantum criticality</p>
+				<p class="journal"><a href="https://arxiv.org/abs/2308.08116" class="journal-link">arXiv:2308.08116 (2023)</a></p>
 			    </div>
 			    
 			    <div class="publication">
