--- a/publications/index.html
+++ b/publications/index.html
@@ -88,6 +88,12 @@
 
 			<div class="publication-list">
 			    <div class="publication">
+				<p class="authors"><span class="my-name">S. Feng</span></p>
+				<p class="title">Hidden subsystem symmetry protected states in competing topological orders</p>
+				<p class="journal">arXiv:2309.ComingSoon</p>
+			    </div>
+			    
+			    <div class="publication">
 				<p class="authors"><span class="my-name">S. Feng</span>, A. Agarwala, N. Trivedi</p>
 				<p class="title">Dimensional reduction of Kitaev spin liquid at quantum criticality</p>
 				<p class="journal"><a href="https://arxiv.org/abs/2308.08116" class="journal-link">arXiv:2308.08116 (2023)</a></p>
