--- a/publications/index.html
+++ b/publications/index.html
@@ -90,7 +90,7 @@
 			    <div class="publication">
 				<p class="authors"><span class="my-name">S. Feng</span></p>
 				<p class="title">Hidden subsystem symmetry protected states in competing topological orders</p>
-				<p class="journal">arXiv:2309.ComingSoon</p>
+				<p class="journal"><a href="https://arxiv.org/abs/2309.02307" class="journal-link">arXiv:2309.02307 (2023)</a></p>
 			    </div>
 			    
 			    <div class="publication">
